Now compatible with Java 8 servers,